# encounter-logging

./: .gitignore  README.md  pyproject.toml
data/raw/: raw_NIST1021_20200716_213906_GMT.bin.marked.csv.xls
model/: data_analysis.py
notebooks/: encounter_pilot.ipynb
