[tool.poetry]
name = "encounter-logging"
version = "0.1.0"
description = "Encounter logging pilot study analysis"
authors = ["SaeWoo Nam, Katy Keenan"]

[tool.poetry.dependencies]
python = ">3.7"
matplotlib = "^3.3.0"
plotly = "^4.9.0"
numpy = "^1.19.0"
pandas = "^1.0.5"
ipython = "^7.16.1"
jupyter = "^1.0.0"
seaborn = "^0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
